--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -2,11 +2,69 @@
 <html>
 <head>
     <title>Zombies</title>
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/960.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
+    <script type = "text/javascript" src="/static/js/paper.js"></script>
+    <style>
+#headline {
+background-color: #eee;
+text-align: center;
+padding: 50px 0px;
+margin-bottom: 20px;
+}
+
+h1 {
+font-size: 5em;
+font-family: 'Chango', cursive;
+margin-bottom: 20px
+}
+
+#form_box {
+}
+
+label {
+margin-bottom: -10px;
+}
+
+#snail {
+padding: 20px 0px;
+}
+    </style>
 </head>
 
 <body>
 
-<p>I'm a pretty butterly</p>
+<div class="container_12">
+
+<div class="grid_12" id="headline">
+    <h1>Snails</h1>
+    <p>&ldquo;The best game of 2012&rdquo;</p>
+</div>
+
+
+<div class="grid_10 prefix_1 suffix_1" id="form_box" style="background-color: #bbb">
+
+    <div class="grid_4 alpha">
+        <img src="static/img/snail_teeth.png" id="snail">
+    </div>
+    
+    <div class="grid_1"><p>&nbsp;</p></div>
+
+
+    <div class="grid_5 omega" style="text-align: center;padding: 30px 0px">
+        <form style="margin-top: 20px">
+        <label>Player Name:</label><br><input type="text">
+        <br>
+        <input type="submit" value="Create a Game" class="btn btn-danger">
+        <input type="submit" value="Join a Game" class="btn btn-danger">
+        </form>
+    </div>
+</div>
+
+</div>
+
 
 </body>
 
