--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -18,7 +18,8 @@ margin-bottom: 20px;
 h1 {
 font-size: 5em;
 font-family: 'Chango', cursive;
-margin-bottom: 20px
+margin-bottom: 20px;
+margin-top: 15px;
 }
 
 #form_box {
@@ -57,8 +58,8 @@ padding: 20px 0px;
         <form style="margin-top: 20px">
         <label>Player Name:</label><br><input type="text">
         <br>
-        <input type="submit" value="Create a Game" class="btn btn-danger">
-        <input type="submit" value="Join a Game" class="btn btn-danger">
+        <a class="btn btn-danger" href="#"><i class="icon-edit icon-white"></i>&nbsp;Create a Game</a>
+        <a class="btn btn-danger" href="#"><i class="icon-user icon-white"></i>&nbsp;Join a Game</a>
         </form>
     </div>
 </div>
