Improved welcome page

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -13,6 +13,7 @@ background-color: #eee;
 text-align: center;
 padding: 50px 0px;
 margin-bottom: 20px;
+box-shadow: 2px 2px 1px #bbb;
 }
 
 h1 {
@@ -45,7 +46,7 @@ padding: 20px 0px;
 </div>
 
 
-<div class="grid_10 prefix_1 suffix_1" id="form_box" style="background-color: #bbb">
+<div class="grid_10 prefix_1 suffix_1" id="form_box" style="background-color: #bbb;box-shadow: 2px 2px 1px #eee;">
 
     <div class="grid_4 alpha">
         <img src="static/img/snail_teeth.png" id="snail">
