--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -5,35 +5,9 @@
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/960.css">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/welcome.css">
     <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
     <script type = "text/javascript" src="/static/js/paper.js"></script>
-    <style>
-#headline {
-background-color: #eee;
-text-align: center;
-padding: 50px 0px;
-margin-bottom: 20px;
-box-shadow: 2px 2px 1px #bbb;
-}
-
-h1 {
-font-size: 5em;
-font-family: 'Chango', cursive;
-margin-bottom: 20px;
-margin-top: 15px;
-}
-
-#form_box {
-}
-
-label {
-margin-bottom: -10px;
-}
-
-#snail {
-padding: 20px 0px;
-}
-    </style>
 </head>
 
 <body>
@@ -45,18 +19,15 @@ padding: 20px 0px;
     <p>&ldquo;The best game of 2012&rdquo;</p>
 </div>
 
-
-<div class="grid_10 prefix_1 suffix_1" id="form_box" style="background-color: #bbb;box-shadow: 2px 2px 1px #eee;">
-
+<div class="grid_10 prefix_1 suffix_1" id="content_box">
     <div class="grid_4 alpha">
         <img src="static/img/snail_teeth.png" id="snail">
     </div>
     
     <div class="grid_1"><p>&nbsp;</p></div>
 
-
-    <div class="grid_5 omega" style="text-align: center;padding: 30px 0px">
-        <form style="margin-top: 20px">
+    <div class="grid_5 omega">
+        <form>
         <label>Player Name:</label><br><input type="text">
         <br>
         <a class="btn btn-danger" href="#"><i class="icon-edit icon-white"></i>&nbsp;Create a Game</a>
@@ -66,7 +37,6 @@ padding: 20px 0px;
 </div>
 
 </div>
-
 
 </body>
 
