--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -20,13 +20,17 @@
 </div>
 
 <div class="grid_10 prefix_1 suffix_1" id="content_box">
-    <div class="grid_4 alpha">
+    <!--<div class="grid_4 alpha" style="border: 1px solid red">
         <img src="static/img/snail_teeth.png" id="snail">
-    </div>
+    </div>-->
+
+    <canvas class="grid_4 alpha">
+
+    </canvas>
     
     <div class="grid_1"><p>&nbsp;</p></div>
 
-    <div class="grid_5 omega">
+    <div class="grid_5 omega" id="form_box">
         <form>
         <label>Player Name:</label><br><input type="text">
         <br>
