--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -16,7 +16,7 @@
 
 <div class="grid_12" id="headline">
     <h1>Snails</h1>
-    <p>&ldquo;The best game of 2012&rdquo;</p>
+    <p>&ldquo;The best game of 2012&rdquo; -- anonymous</p>
 </div>
 
 <div class="grid_10 prefix_1 suffix_1" id="content_box">
