--- a/game/static/css/welcome.css
+++ b/game/static/css/welcome.css
@@ -33,7 +33,7 @@ margin: 5px 0px;
 text-align: center;
 }
 
-#form_box form {
+#login_form {
 margin-top: 50px;
 }
 
@@ -47,5 +47,6 @@ padding: 20px 0px;
 }
 
 .error {
-color: #f00
+color: #f00;
+margin-bottom: 0px;
 }
