--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/welcome.css">
     <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
     <script type = "text/javascript" src="/static/js/paper.js"></script>
+    <script type = "text/javascript" src="/static/js/jquery-1.7.2.min.js"></script>
 </head>
 
 <body>
@@ -31,6 +32,11 @@
             {{ form.player_name }}
 
             {% if form.player_name.errors %}
+                <script>
+                $('#login_form').animate(
+                {'margin-top': '35px'}
+                );
+                </script>
                 {% for error in form.player_name.errors %}
                     <p class="error">{{ error|escape }}</p>
                 {% endfor %}
