--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/static/css/960.css">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
     {% block extra_css %}{% endblock %}
     <script type = "text/javascript" src="/static/js/paper.js"></script>
     <script type = "text/javascript" src="/static/js/jquery-1.7.2.min.js"></script>
