--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -22,7 +22,7 @@
     <p>&ldquo;The best game of 2012&rdquo; -- anonymous</p>
 </div>
 
-<div class="grid_10 prefix_1 suffix_1" id="content_box">
+<div class="grid_12" id="content_box">
     {% block content %}{% endblock %}
 </div>
 
