--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block content %}
-<canvas id="canvas" class="grid_12" style="height:600px"></canvas>
+<canvas id="canvas" class="grid_12" style="height:600px" resize></canvas>
 
 <img src="/static/img/snail_teeth.png" class="grid_1" id="snail" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 {% endblock %}
