Fixed snail scale and made progress on create game screen

--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -5,5 +5,21 @@
 {% endblock %}
 
 {% block content %}
-    <p>Create a game</p>
+    <div class="grid_4"><p>&nbsp;</p></div>
+
+    <div class="grid_4" style="text-align: center; padding-top: 10px">
+        <p>List of Players:</p>
+        
+        <div style="width: 100%;border: 1px solid #bbb; ">
+            <p>TODO</p>
+        </div>
+
+        <p>
+        <br> 
+
+        <a class="btn btn-danger" id="btn_start_game" href="#">
+            <i class="icon-ok icon-white"></i>&nbsp;Start the Game
+        </a>
+        </p>
+    </div>
 {% endblock %}
