--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -17,7 +17,7 @@
         <p>
         <br> 
 
-        <a class="btn btn-danger" id="btn_start_game" href="#">
+        <a class="btn btn-danger" id="btn_start_game" href="/game">
             <i class="icon-ok icon-white"></i>&nbsp;Start the Game
         </a>
         </p>
