--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -42,21 +42,14 @@ margin-bottom: -10px;
 }
 
 #player_list {
+width: 100%;
+border: 1px solid #bbb; 
 text-align: left;
 }
 
 #player_list ul {
 margin: 10px 30px;
-}
-
-/*#player_list li {
-margin: 0px;
-padding: 2px;
-}*/
-
-/* TODO - remove */
-#snail {
-padding: 20px 0px;
+font-weight: bold;
 }
 
 .error {
