--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -10,12 +10,10 @@
     <div class="grid_4" style="text-align: center; padding-top: 10px">
         <p>List of Players:</p>
         
-        <div id="player_list" style="width: 100%;border: 1px solid #bbb; ">
-        </div>
+        <div id="player_list"></div>
 
         <p>
         <br> 
-
         <a class="btn btn-danger" id="btn_start_game" href="/game">
             <i class="icon-ok icon-white"></i>&nbsp;Start the Game
         </a>
