--- a/game/templates/game/join_game.html
+++ b/game/templates/game/join_game.html
@@ -5,18 +5,17 @@
 {% endblock %}
 
 {% block content %}
-    <div class="grid_4"><p>&nbsp;</p></div>
+    <div class="grid_1"><p>&nbsp;</p></div>
 
-    <div class="grid_4" style="text-align: center; padding-top: 10px">
+    <div class="grid_5" style="text-align: center; padding-top: 10px">
         <p>List of Games:</p>
         
         <div id="game_list"></div>
-
-        <p>
-        <br> 
-        <a class="btn btn-danger" id="btn_start_game" href="/game">
-            <i class="icon-ok icon-white"></i>&nbsp;Join the Game
-        </a>
-        </p>
+    </div>
+    
+    <div class="grid_1"><p>&nbsp;</p></div>
+    
+    <div class="grid_4" style="text-align: center; padding-top: 10px; border: 1px solid red">
+        <p>You Joined:</p>
     </div>
 {% endblock %}
