--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -9,37 +9,38 @@
             paper.setup('canvas');
 			entitySetup();
 
-			//var snail = new Snail(view.center);
-        	var snail = new SnailGroup(5);
+		var house = new Raster('house');
+		house.position = view.center;
+		house.scale(0.9);
+        	
+  		var snail = new SnailGroup(5);
 		var snailmoo = new SnailGroup(5);
 
-		var horCount = 0;
-		var verCount = 0;
 		var scaleCount = 0; 
+		var weight = 1;
+
         	view.onFrame = function(event) {
 			if (Key.isDown('i') && (scaleCount < 5)) {
-			    project.activeLayer.scale(1.25);
+			    project.activeLayer.scale(1.25, view.center);
+			    weight *= 0.8;
 			    scaleCount++;
 			}
 			if (Key.isDown('o') && (scaleCount > -5)) {
-			    project.activeLayer.scale(0.8);
+			    project.activeLayer.scale(0.8, view.center);
+			    weight *= 1.25;
 			    scaleCount--;
 			}
-			if (Key.isDown('right') && (horCount < 5)) {
-			    project.activeLayer.translate([-100,0]);
-			    horCount++;
+			if (Key.isDown('right')) {
+			    scroll(new Point(-100 * weight, 0));
 			}
-			if (Key.isDown('left') && (horCount > -5)) {
-			    project.activeLayer.translate([100,0]);
-			    horCount--;
+			if (Key.isDown('left')) {
+			    scroll(new Point(100 * weight, 0));
 			}
-			if (Key.isDown('up') && (verCount < 5)) {
-			    project.activeLayer.translate([0,100]);
-			    verCount++;
+			if (Key.isDown('up')) {
+			    scroll(new Point(0, 100 * weight));
 			}
-			if (Key.isDown('down') && (verCount > -5)) {
-			    project.activeLayer.translate([0,-100]);
-			    verCount--;
+			if (Key.isDown('down')) {
+			    scroll(new Point(0, -100 * weight));
 			}
 		    	snailUpdate();
 			snail.move();
@@ -49,13 +50,18 @@
         	var click = true;
         	tool.onMouseDown = function(event) {
 				if (click) {
-            		snail.setDestination(event.point);
+            				snail.setDestination(event.point);
 				} else {
 					snailmoo.setDestination(event.point);
 				}
 				click = !click;
         	}
- 		}
+		scroll = function(movement) {
+		    if (!project.activeLayer.translate(movement).bounds.contains(view.center)) {
+			project.activeLayer.translate(new Point(0,0).subtract(movement));
+		    }
+		}
+ 	}
     </script>
 {% endblock %}
 
@@ -63,4 +69,5 @@
 <canvas id="canvas" class="grid_12" style="height:600px" resize></canvas>
 
 <img src="/static/img/snail_teeth.png" class="grid_1" id="snail" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
+<img src="/static/img/houseplan_3floors_white.png" class="grid_1" id="house" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 {% endblock %}
