--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -14,7 +14,8 @@ window.onload = function() {
     house.scale(0.9);
 
     var snail = new SnailGroup(5);
-    var snailmoo = new SnailGroup(5);
+    //var snailmoo = new SnailGroup(5);
+    var snailmoo = new Ghost(view.center);
 
     var scaleCount = 0; 
     var weight = 1;
@@ -32,9 +33,11 @@ window.onload = function() {
         }
         if (Key.isDown('right')) {
             scroll(new Point(-100 * weight, 0));
+            snailmoo.pickUp();
         }
         if (Key.isDown('left')) {
             scroll(new Point(100 * weight, 0));
+            snailmoo.drop();
         }
         if (Key.isDown('up')) {
             scroll(new Point(0, 100 * weight));
@@ -70,4 +73,6 @@ window.onload = function() {
 
 <img src="/static/img/snail_teeth.png" class="grid_1" id="snail" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 <img src="/static/img/houseplan_3floors_white.png" class="grid_1" id="house" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
+<img src="/static/img/ghost_gun.png" class="grid_1" id="ghost" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
+<img src="/static/img/ghost_ammobox.png" class="grid_1" id="ghostbox" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 {% endblock %}
