Refactored AJAX calls and URLs

--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -59,6 +59,10 @@ text-align: left;
 margin-bottom: 20px;
 }
 
+#game_list p {
+margin: 10px;
+}
+
 #game_list ul {
 margin: 10px 30px;
 font-weight: bold;
