--- a/game/templates/game/join_game.html
+++ b/game/templates/game/join_game.html
@@ -16,6 +16,10 @@
     <div class="grid_1"><p>&nbsp;</p></div>
     
     <div class="grid_4" style="text-align: center; padding-top: 10px; border: 1px solid red">
-        <p>You Joined:</p>
+        <p style="text-align: left">You Joined: <span id="game_name"></span></p>
+        
+        <p>List of Players:</p>
+        
+        <div id="player_list"></div>
     </div>
 {% endblock %}
