--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -9,15 +9,27 @@ window.onload = function() {
     paper.setup('canvas');
     entitySetup();
 
-    var snail = new SnailGroup(5);
+    //var snail = new SnailGroup(5);
     //var snailmoo = new SnailGroup(5);
-    var snailmoo = new Ghost(view.center);
+    var width = document.getElementById("canvas").width;
+    var height = document.getElementById("canvas").height;
+
+    var mainRoom = new Room(view.center.add(new Point(0, 650)));
+    var snailmoo = new Ghost('red', mainRoom);
 
     var scaleCount = 0; 
     var weight = 1;
 
     view.onFrame = function(event) {
-        if (Key.isDown('i') && (scaleCount < 5)) {
+	if (Key.isDown('w')) {
+	}
+	if (Key.isDown('a')) {
+	}
+	if (Key.isDown('s')) {
+	}
+	if (Key.isDown('d')) {
+	}
+        if (Key.isDown('i') && (scaleCount < 10)) {
             project.activeLayer.scale(1.25, view.center);
             weight *= 0.8;
             scaleCount++;
@@ -42,14 +54,15 @@ window.onload = function() {
             scroll(new Point(0, -100 * weight));
         }
         snailUpdate();
-        snail.move();
+        //snail.move();
         snailmoo.move();
     }
 
     var click = true;
     tool.onMouseDown = function(event) {
         if (click) {
-            snail.setDestination(event.point);
+            snailmoo.setDestination(mainRoom.position);
+            //snail.setDestination(event.point);
         } else {
             snailmoo.setDestination(event.point);
         }
@@ -60,15 +73,19 @@ window.onload = function() {
             project.activeLayer.translate(new Point(0,0).subtract(movement));
         }
     }
+
+    tool.onResize = function(event) {
+    	view.viewSize = [width, height]; 
+    }
 }
 </script>
 {% endblock %}
 
 {% block content %}
-<canvas id="canvas" class="grid_12" style="height:600px" resize></canvas>
+<canvas id="canvas" class="grid_12" resize></canvas>
 
 <img src="/static/img/snail_teeth.png" class="grid_1" id="snail" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
-<img src="/static/img/houseplan_3floors_white.png" class="grid_1" id="house" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
+<img src="/static/img/larger_houseplan.png" class="grid_1" id="house" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 <img src="/static/img/ghost_gun.png" class="grid_1" id="ghost" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 <img src="/static/img/ghost_ammobox.png" class="grid_1" id="ghostbox" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
 <img src="/static/img/ammobox.png" class="grid_1" id="ammobox" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
