Cleaned up jack's mess, re-introduced a feature that got removed in last commit (it's not a bug you moron)

--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -77,3 +77,11 @@ width: 270px;
 color: #f00;
 margin-bottom: 0px;
 }
+.sprite {
+height: 42px;
+width: 42px;
+visibility: hidden;
+position: absolute;
+top: 1px;
+left: 1px;
+}
