--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -82,11 +82,11 @@ window.onload = function() {
 {% endblock %}
 
 {% block content %}
-<canvas id="canvas" class="grid_12" resize></canvas>
+<canvas id="canvas" class="grid_12" style="height: 800px" resize></canvas>
 
-<img src="/static/img/snail_teeth.png" class="grid_1" id="snail" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
-<img src="/static/img/larger_houseplan.png" class="grid_1" id="house" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
-<img src="/static/img/ghost_gun.png" class="grid_1" id="ghost" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
-<img src="/static/img/ghost_ammobox.png" class="grid_1" id="ghostbox" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
-<img src="/static/img/ammobox.png" class="grid_1" id="ammobox" height="42" width="42" style="visibility:hidden; position: absolute; top:1px; left:1px" />
+<img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
+<img src="/static/img/larger_houseplan.png" class="sprite" id="house" />
+<img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
+<img src="/static/img/ghost_ammobox.png" class="sprite" id="ghostbox" />
+<img src="/static/img/ammobox.png" class="sprite" id="ammobox" />
 {% endblock %}
