--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -12,11 +12,8 @@
         
         <div id="player_list"></div>
 
-        <p>
-        <br> 
-        <a class="btn btn-danger" id="btn_start_game" href="/game">
+        <p><a class="btn btn-danger" id="btn_start_game" href="/game">
             <i class="icon-ok icon-white"></i>&nbsp;Start the Game
-        </a>
-        </p>
+        </a></p>
     </div>
 {% endblock %}
